style/about.css
body {
    background-color: black;
    color: white;
    font-family:'Times New Roman', Times, serif;
}

.aboutmemsg_div {
    width: 70%;
    height: 8%;
    margin-right: 15%;
    margin-left: 15%;
    padding: 1%;
    margin-top: 2%;
    text-align: center;
    background-color: black; 
    box-shadow: 0px 0px 15px 1px white;
    transition: box-shadow 0.3s, transform 0.3s; 
    animation: fadeInText 5s ease forwards;
    border-radius: 15px;
    border: 4px solid black;
    cursor: pointer;
    flex: 1;
}   
.aboutmemsg_div.white-shadow {
    box-shadow: 5px 5px 15px 2px white;
}
.aboutmemsg_div.black-shadow {
    box-shadow: 3px 3px 5px 6px black;
}
.aboutmemsg_div.black-shadow:hover {
    box-shadow: 6px 8px 7px 1px black;
    transform: translate(-5px);
}
.aboutmsg_div.white-shadow:hover {
    box-shadow: 6px 8px 7px 1px white;
    transform: translate(-5px);
}
.aboutmemsg_div:hover {
    box-shadow: 6px 8px 7px 1px white;
    transform: translate(-5px);
}
.aboutme_msg {
    font-size: 100%;
    font-weight: bold;
}

/* ******************************Skills tab window************************************ */
.skills_tab {
    width: 210px;
    height: 40px;
    color: white;
    position: absolute;
    align-items: center;
    margin-left: 10px;
    display: flex;
    padding: 10px;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    text-align: center;
    border: 3px solid black;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .skills_tab {
        top: 370px;
        width: 20%;
        height: 30px;
    }
}
@media screen and (min-width: 481px) {
    .skills_tab {
        top: 38%;
    }
}
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.skills_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    color: white;
    text-align: center;
    padding: 20px 0; 
    z-index: 999; 
}

/*  *********************** Tech skills main container *********************** */
.skills_container {
    background-color: black;
    width: 90%;
    margin-bottom: 5%;
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
    border-radius: 15px;
    border: 3px solid black;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s; 
    flex-wrap: wrap; 
    align-items: center;
    animation: fadeInText 5s ease forwards;
    gap: 10px; 
    z-index: 1;
}
@media screen and (max-width: 480px) {
    .skills_container {
        margin-top: 170px;
        height: auto;
        width: 80%;
    }
}
@media screen and (min-width: 481px) {
    .skills_container {
        margin-top: 9%;
    }
}

.skills {
    background-color: black;
    text-align: center;
    padding: 10px;
    margin: 5px auto;
    border-radius: 5px;
    width: 200px;
    height: 200px;
    word-wrap: break-word;
    display: inline-block;
    overflow: hidden; 
    position: relative; 
}

.skills img {
    border-radius: 50%;
    animation: float 5s infinite alternate; 
    box-shadow: 1px 5px 8px 1px white;
    width: 50px;
    height: 50px;
}

.skills:hover img {
    transform: rotate(360deg); 
    box-shadow: 2px 4px 3px 1px white;
    transform: translate(-5px);
}

.img_logo {
    width: 50px;
    height: 50px;
}
@keyframes float {
    0% {
        transform: translate(0px, 0px);
    }
    50% {
        transform: translate(10px, 10px); 
    }
    100% {
        transform: translate(0px, 0px);
    }
}

/*  *********************** Tech skills divs *********************** */
.skillContainer_child {
    background-color: black;
    text-align: center;
    padding: 10px;
    margin: 5px;
    border-radius: 5px;
    width: 200px;
    height: 250px;
    border: 2px solid white;
    word-wrap: break-word;
    display: inline-block;
    overflow: hidden; 
    align-items: center;
    position: relative;
    cursor: pointer;
    z-index: 1;
}
.skillContainer_child:hover {
    border-color: lightslategray;
}
.skillContainer_child img {
    border-radius: 50%;
    animation: float 5s infinite alternate; 
    transition: transform 0.3s ease-in-out;
    box-shadow: 1px 5px 8px 1px white;
    background-color: black;
    width: 50px;
    height: 50px;
}
.skillContainer_child:hover img {
    transform: rotate(360deg); 
    box-shadow: 2px 4px 3px 1px lightslategray;
    transform: translate(-5px);
}

/*  *********************** Bullet point text *********************** */
.bulletPoint_text {
    top: 2px;
    margin-left: -10px;
}

/*  *********************** Bullet point colors *********************** */
.green_bullet {
    list-style-type: none;
    position: relative;
    padding-left: 0;
}
.green_bullet li {
    position: relative;
    padding-left: 20px;
    line-height: 1.5;
    margin-bottom: 20px;
}
.green_bullet::before {
    content: "•";
    color: rgb(3, 250, 3);
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

.white_bullet {
    list-style-type: none;
    position: relative;
}
.white_bullet::before {
    content: "•";
    color: white;
    font-size: 26px;
    position: absolute;
    left: 0;
    top: -5px;
}

.red_bullet {
    list-style-type: none;
    position: relative;
}
.red_bullet::before {
    content: "•";
    color: red;
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

.yellow_bullet {
    list-style-type: none;
    position: relative;
}
/* ... */

